fix: 게시물 상세 페이지 overflow-x 수정

--- a/frontend/src/pages/PostDetail/PostDetail.module.css
+++ b/frontend/src/pages/PostDetail/PostDetail.module.css
@@ -59,7 +59,7 @@
   width: 820px;
   text-align: start;
   margin: 0 auto;
-  overflow-x: auto;
+  /* overflow-x: auto; */
 
   /* border: 1px dotted violet; */
 }
